# samovar

./: .gitignore  README.md  TODO.md  pyproject.toml  samovar.py
lib/: agent.py  checkpoint.py  project.py  state.py
skills/: classify.md  coordinator.md  investigate.md  report.md  review.md  setup.md
templates/project/: .gitignore  samovar.yaml
templates/project/lexicon/: corrections.md  slang.md  techniques.md
templates/project/sources/: collector_template.py
