[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "samovar"
version = "0.1.0"
description = "OSINT research harness that orchestrates AI agents for threat intelligence"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Camila" }]
dependencies = ["pyyaml"]

[project.scripts]
samovar = "samovar:main"

[tool.setuptools]
py-modules = ["samovar"]

[tool.setuptools.packages.find]
include = ["lib*"]

[tool.setuptools.package-data]
"*" = ["skills/*.md", "templates/**/*"]
